@@ -1,4 +1,8 @@
-ChangeLog for varconf
+2004-11-13  Al Riddoch  <alriddoch@zepler.org>
+
+	* tests/conftest.cpp: Fix a couple of places to work with sigc++2.
+	  Cleanup namespace use generally.
+
 2004-11-11  Ron Steinke <rsteinke@w-link.net>
 
 	* varconf/config.cpp: Initialize Config::m_instance to 0, instead
